--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -34,17 +34,17 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="headerbar-left">
             <ul class="header-nav header-nav-options">
-                <li class="header-nav-brand" >
-                    <div class="brand-holder">
-                        <a href="/admin/">
-                            <span class="text-lg text-bold text-primary">BigBell ADMIN</span>
-                        </a>
-                    </div>
-                </li>
                 <li>
                     <a class="btn btn-icon-toggle menubar-toggle" data-toggle="menubar" href="javascript:void(0);">
                         <i class="fa fa-bars"></i>
                     </a>
+                </li>
+                <li class="header-nav-brand" >
+                    <div class="brand-holder">
+                        <a href="/">
+                            <span class="text-lg text-bold text-primary">BigBell ADMIN</span>
+                        </a>
+                    </div>
                 </li>
             </ul>
         </div>
@@ -61,72 +61,83 @@
                     </form>
                 </li>
 
-                <li class="dropdown hidden-xs">
-                    <a href="javascript:void(0);" class="btn btn-icon-toggle btn-default" data-toggle="dropdown">
-                        <i class="fa fa-area-chart"></i>
-                    </a>
-                    <ul class="dropdown-menu animation-expand">
-                        <li class="dropdown-header">Мои Активы</li>
-                        <li class="dropdown-progress">
-                            <a href="javascript:void(0);">
-                                <div class="dropdown-label">
-                                    <span class="text-light">Консервативный</span>
-                                    <strong class="pull-right">93%</strong>
-                                </div>
-                                <div class="progress"><div class="progress-bar progress-bar-danger" style="width: 93%"></div></div>
-                            </a>
-                        </li><!--end .dropdown-progress -->
-                        <li class="dropdown-progress">
-                            <a href="javascript:void(0);">
-                                <div class="dropdown-label">
-                                    <span class="text-light">Сбалансированный</span>
-                                    <strong class="pull-right">30%</strong>
-                                </div>
-                                <div class="progress"><div class="progress-bar progress-bar-success" style="width: 30%"></div></div>
-                            </a>
-                        </li><!--end .dropdown-progress -->
-                        <li class="dropdown-progress">
-                            <a href="javascript:void(0);">
-                                <div class="dropdown-label">
-                                    <span class="text-light">Агрессивный</span>
-                                    <strong class="pull-right">74%</strong>
-                                </div>
-                                <div class="progress"><div class="progress-bar progress-bar-warning" style="width: 74%"></div></div>
-                            </a>
-                        </li><!--end .dropdown-progress -->
-                    </ul><!--end .dropdown-menu -->
-                </li><!--end .dropdown -->
+                {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                    <li class="dropdown hidden-xs">
+                        <a href="javascript:void(0);" class="btn btn-icon-toggle btn-default" data-toggle="dropdown">
+                            <i class="fa fa-area-chart"></i>
+                        </a>
+                        <ul class="dropdown-menu animation-expand">
+                            <li class="dropdown-header">Мои Активы</li>
+                            <li class="dropdown-progress">
+                                <a href="javascript:void(0);">
+                                    <div class="dropdown-label">
+                                        <span class="text-light">Консервативный</span>
+                                        <strong class="pull-right">93%</strong>
+                                    </div>
+                                    <div class="progress"><div class="progress-bar progress-bar-danger" style="width: 93%"></div></div>
+                                </a>
+                            </li><!--end .dropdown-progress -->
+                            <li class="dropdown-progress">
+                                <a href="javascript:void(0);">
+                                    <div class="dropdown-label">
+                                        <span class="text-light">Сбалансированный</span>
+                                        <strong class="pull-right">30%</strong>
+                                    </div>
+                                    <div class="progress"><div class="progress-bar progress-bar-success" style="width: 30%"></div></div>
+                                </a>
+                            </li><!--end .dropdown-progress -->
+                            <li class="dropdown-progress">
+                                <a href="javascript:void(0);">
+                                    <div class="dropdown-label">
+                                        <span class="text-light">Агрессивный</span>
+                                        <strong class="pull-right">74%</strong>
+                                    </div>
+                                    <div class="progress"><div class="progress-bar progress-bar-warning" style="width: 74%"></div></div>
+                                </a>
+                            </li><!--end .dropdown-progress -->
+                        </ul><!--end .dropdown-menu -->
+                    </li><!--end .dropdown -->
+                {% endif %}
             </ul><!--end .header-nav-options -->
-
-            <ul class="header-nav header-nav-profile">
-                <li class="dropdown">
-                    <a href="javascript:void(0);" class="dropdown-toggle ink-reaction" data-toggle="dropdown">
-                        <div>
-                            <span class="profile-info">
-                                {% if user is defined %}
-                                    {{ user.username }}
-                                {% endif %}
-						    </span>
-                        </div>
-                        <div>
-                            <small>
-                                {% if user is defined %}
-                                    {{ user.email }}
-                                {% endif %}
-                            </small>
-                        </div>
-                    </a>
-                    <ul class="dropdown-menu animation-dock">
-                        <li class="dropdown-header">Config</li>
-                        <li><a href="#"> Баланс <span class="badge style-danger pull-right" style="background-color: #3682f4;">12 000.00 $</span></a></li>
-                        <li><a href="/profile/">Мой профиль</a></li>
-                        <li><a href="#/news">Hовости</a></li>
-                        <li class="divider"></li>
-                        <li><a href="/logout"><i class="fa fa-fw fa-power-off text-danger"></i> Logout</a></li>
-                    </ul><!--end .dropdown-menu -->
-                </li><!--end .dropdown -->
-            </ul><!--end .header-nav-profile -->
-
+            {% if user is defined %}
+                <ul class="header-nav header-nav-profile">
+                    <li class="dropdown">
+                        <a href="javascript:void(0);" class="dropdown-toggle ink-reaction" data-toggle="dropdown">
+                            <div>
+                                <span class="profile-info">
+                                    {% if user is defined %}
+                                        {{ user.username }}
+                                    {% endif %}
+                                </span>
+                            </div>
+                            <div>
+                                <small>
+                                    {% if user is defined %}
+                                        {{ user.email }}
+                                    {% endif %}
+                                </small>
+                            </div>
+                        </a>
+                        <ul class="dropdown-menu animation-dock">
+                            {#<li class="dropdown-header">Config</li>#}
+                            <li><a href="#"> Баланс <span class="badge style-danger pull-right" style="background-color: #3682f4;">12 000.00 $</span></a></li>
+                            <li><a href="/profile/">Мой профиль</a></li>
+                            <li><a href="/admin/">Кабинет</a></li>
+                            {#<li><a href="#/news">Hовости</a></li>#}
+                            <li class="divider"></li>
+                            <li><a href="/logout"><i class="fa fa-fw fa-power-off text-danger"></i> Logout</a></li>
+                        </ul><!--end .dropdown-menu -->
+                    </li><!--end .dropdown -->
+                </ul><!--end .header-nav-profile -->
+            {% else %}
+                <div class="header-nav header-nav-profile">
+                    <div style="padding-top: 22px;">
+                        <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
+                            <i class="md md-exit-to-app"></i>
+                        </a>
+                    </div>
+                 </div><!--end .dropdown-menu -->
+            {% endif %}
             {#<ul class="header-nav header-nav-toggle">#}
                 {#<li>#}
                     {#<a class="btn btn-icon-toggle btn-default" href="#offcanvas-search" data-toggle="offcanvas" data-backdrop="false">#}
@@ -164,8 +175,8 @@
                 </a>
             </div>
             <div class="expanded">
-                <a href="/materialadmin/html/dashboards/dashboard.html">
-                    <span class="text-lg text-bold text-primary ">MATERIAL&nbsp;ADMIN</span>
+                <a href="/">
+                    <span class="text-lg text-bold text-primary ">ADMIN</span>
                 </a>
             </div>
         </div>
@@ -176,7 +187,7 @@
 
                 <!-- BEGIN DASHBOARD -->
                 <li>
-                    <a href="#/materialadmin/html/dashboards/dashboard.html" class="active">
+                    <a href="#" class="active">
                         <div class="gui-icon"><i class="md md-home"></i></div>
                         <span class="title">Приборная доска</span>
                     </a>
