--- a/templates/bundles/FOSUserBundle/Security/login_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login_content.html.twig
@@ -1,22 +1,34 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-{% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-{% endif %}
-
-<form action="{{ path("fos_user_security_check") }}" method="post">
-    {% if csrf_token %}
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-    {% endif %}
-
-    <label for="username">{{ 'security.login.username'|trans }}</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" autocomplete="username" />
-
-    <label for="password">{{ 'security.login.password'|trans }}</label>
-    <input type="password" id="password" name="_password" required="required" autocomplete="current-password" />
-
-    <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-    <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
-
-    <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
-</form>
+<div class="card contain-sm style-transparent">
+    <div class="card-body">
+        <div class="row">
+            {% if error %}
+                <div class="alert alert-callout alert-info" style="color: #f00000;" >
+                    <i class="md md-notifications pull-right text-danger"></i> {{ error.messageKey|trans(error.messageData, 'security') }}
+                </div>
+            {% endif %}
+            <form  class="form floating-label" action="{{ path("fos_user_security_check") }}" method="post" style="
+                padding-left: 22px;
+                padding-right: 22px;
+            ">
+                {% if csrf_token %}
+                    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+                {% endif %}
+                <div class="form-group">
+                    <label class="form-control" for="username">{{ 'security.login.username'|trans }}</label>
+                    <input  class="form-control" type="text" id="username" name="_username" value="{{ last_username }}" required="required" autocomplete="username" />
+                </div>
+                <div class="form-group">
+                    <label class="form-control"  for="password">{{ 'security.login.password'|trans }}</label>
+                    <input  class="form-control" type="password" id="password" name="_password" required="required" autocomplete="current-password" />
+                </div>
+                <div class="form-group">
+                    <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
+                    <label class="form-control"   class="form-control" for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
+                </div>
+                <input class="btn btn-primary btn-raised"   class="form-control" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+            </form>
+        </div>
+    </div>
+</div>
