--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -5,6 +5,38 @@
         <div class="section-body">
             <div class="row">
 
+
+
+
+                <!-- BEGIN BUTTON -->
+                <div class="col-md-3 col-sm-6">
+                    <div class="card">
+                        <button type="button" class=" btn btn-block ink-reaction btn-default-bright">
+                            Консервативный
+                        </button>
+                    </div><!--end .card -->
+                </div><!--end .col -->
+                <!-- END BUTTON -->
+
+                <!-- BEGIN BUTTON -->
+                <div class="col-md-3 col-sm-6">
+                    <div class="card">
+                        <button type="button" class=" btn btn-block ink-reaction btn-info ">Сбалансированный</button>
+                    </div><!--end .card -->
+                </div><!--end .col -->
+                <!-- END BUTTON -->
+
+                <!-- BEGIN BUTTON -->
+                <div class="col-md-3 col-sm-6">
+                    <div class="card">
+                        <button type="button" class="btn btn-block ink-reaction btn-warning">Агрессивный</button>
+                    </div><!--end .card -->
+                </div><!--end .col -->
+                <!-- END BUTTON -->
+
+
+
+
                 {#<!-- BEGIN ALERT - REVENUE -->#}
                 {#<div class="col-md-3 col-sm-6">#}
                     {#<div class="card">#}
