--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -187,7 +187,7 @@
 
                 <!-- BEGIN DASHBOARD -->
                 <li>
-                    <a href="#" class="active">
+                    <a href="/admin/" class="active">
                         <div class="gui-icon"><i class="md md-home"></i></div>
                         <span class="title">Приборная доска</span>
                     </a>
@@ -253,20 +253,22 @@
                 {#</li><!--end /menu-li -->#}
                 {#<!-- END UI -->#}
 
-                {#<!-- BEGIN TABLES -->#}
-                {#<li class="gui-folder">#}
-                    {#<a>#}
-                        {#<div class="gui-icon"><i class="fa fa-table"></i></div>#}
-                        {#<span class="title">Tables</span>#}
-                    {#</a>#}
-                    {#<!--start submenu -->#}
-                    {#<ul>#}
+                <!-- BEGIN TABLES -->
+                <li class="gui-folder">
+                    <a>
+                        <div class="gui-icon"><i class="fa fa-table"></i></div>
+                        <span class="title">Финансы</span>
+                    </a>
+                    <!--start submenu -->
+                    <ul>
+                        <li><a href="#/" ><span class="title">Пополнить</span></a>
+                        <li><a href="#/" ><span class="title">Вывести</span></a>
                         {#<li><a href="#/materialadmin/html/tables/static.html" ><span class="title">Static Tables</span></a></li>#}
                         {#<li><a href="#/materialadmin/html/tables/dynamic.html" ><span class="title">Dynamic Tables</span></a></li>#}
                         {#<li><a href="#/materialadmin/html/tables/responsive.html" ><span class="title">Responsive Table</span></a></li>#}
-                    {#</ul><!--end /submenu -->#}
-                {#</li><!--end /menu-li -->#}
-                {#<!-- END TABLES -->#}
+                    </ul><!--end /submenu -->
+                </li><!--end /menu-li -->
+                <!-- END TABLES -->
 
                 {#<!-- BEGIN FORMS -->#}
                 {#<li class="gui-folder">#}
