--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -6,12 +6,12 @@
     <!-- BEGIN META -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="your,keywords">
-    <meta name="description" content="Short explanation about this website">
+    <meta name="keywords" content="ИНВЕСТИРУЙТЕ УВЕРЕННО">
+    <meta name="description" content="Покупайте акции с высоким потенциалом дохода.">
     <!-- END META -->
 
     <!-- BEGIN STYLESHEETS -->
-    <link href='http://fonts.googleapis.com/css?family=Roboto:300italic,400italic,300,400,500,700,900' rel='stylesheet' type='text/css'/>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:300italic,400italic,300,400,500,700,900' rel='stylesheet' type='text/css'/>
     <link type="text/css" rel="stylesheet" href="/materialadmin/assets/css/theme-default/bootstrap.css?1422792965" />
     <link type="text/css" rel="stylesheet" href="/materialadmin/assets/css/theme-default/materialadmin.css?1425466319" />
     <link type="text/css" rel="stylesheet" href="/materialadmin/assets/css/theme-default/font-awesome.min.css?1422529194" />
