--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -577,7 +577,7 @@
 <script src="/materialadmin/assets/js/core/source/AppNavSearch.js"></script>
 <script src="/materialadmin/assets/js/core/source/AppVendor.js"></script>
 <script src="/materialadmin/assets/js/core/demo/Demo.js"></script>
-<script src="/materialadmin/assets/js/core/demo/DemoDashboard.js"></script>
+{#<script src="/materialadmin/assets/js/core/demo/DemoDashboard.js"></script>#}
 <!-- END JAVASCRIPT -->
 
 </body>
