--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -5,13 +5,10 @@
         <div class="section-body">
             <div class="row">
 
-
-
-
                 <!-- BEGIN BUTTON -->
                 <div class="col-md-3 col-sm-6">
                     <div class="card">
-                        <button type="button" class=" btn btn-block ink-reaction btn-default-bright">
+                        <button type="button" class=" btn btn-block ink-reaction btn-default-bright"  data-toggle="modal" data-target="#ConservativeModal">
                             Консервативный
                         </button>
                     </div><!--end .card -->
@@ -21,7 +18,7 @@
                 <!-- BEGIN BUTTON -->
                 <div class="col-md-3 col-sm-6">
                     <div class="card">
-                        <button type="button" class=" btn btn-block ink-reaction btn-info ">Сбалансированный</button>
+                        <button type="button" class=" btn btn-block ink-reaction btn-info " data-toggle="modal" data-target="#BalancedModal" >Сбалансированный</button>
                     </div><!--end .card -->
                 </div><!--end .col -->
                 <!-- END BUTTON -->
@@ -29,13 +26,10 @@
                 <!-- BEGIN BUTTON -->
                 <div class="col-md-3 col-sm-6">
                     <div class="card">
-                        <button type="button" class="btn btn-block ink-reaction btn-warning">Агрессивный</button>
+                        <button type="button" class="btn btn-block ink-reaction btn-warning"  data-toggle="modal" data-target="#AggressiveModal" >Агрессивный</button>
                     </div><!--end .card -->
                 </div><!--end .col -->
                 <!-- END BUTTON -->
-
-
-
 
                 {#<!-- BEGIN ALERT - REVENUE -->#}
                 {#<div class="col-md-3 col-sm-6">#}
@@ -145,7 +139,7 @@
                                     <div class="progress progress-hairline">
                                         <div class="progress-bar progress-bar-primary-dark" style="width:63%"></div>
                                     </div>
-                                    132 Средства
+                                    Свободные средства
                                     <span class="pull-right text-success text-sm">0,18% <i class="md md-trending-up"></i></span>
                                     <div class="progress progress-hairline">
                                         <div class="progress-bar progress-bar-primary-dark" style="width:47%"></div>
@@ -157,7 +151,149 @@
                 </div><!--end .col -->
                 <!-- END SITE ACTIVITY -->
             </div><!--end .row -->
-
         </div><!--end .section-body -->
     </section>
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="ConservativeModal" tabindex="-1" role="dialog" aria-labelledby="ConservativeModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel"> Консервативный </h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <!-- BEGIN SPINNERS -->
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h4>Консервативный</h4>
+                        </div><!--end .col -->
+                        <div class="col-lg-3 col-md-4">
+                            <article class="margin-bottom-xxl">
+                                <p>
+                                    Консервативный - это ... .... .... ... ... ...... .... .... ... ... ..., ...  ...
+                                    ... .... .... ... ... ... ,... .... .... ... ... ...,... .... .... ... ... ...
+                                </p>
+                            </article>
+                        </div><!--end .col -->
+                        <div class="col-lg-offset-1 col-md-8">
+                            <div class="card">
+                                <div class="card-body">
+                                    <form class="form">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" id="spinner-decimal" value="0.96"/>
+                                            <label>Сума инвестирования</label>
+                                        </div>
+                                    </form>
+                                </div><!--end .card-body -->
+                            </div><!--end .card -->
+                        </div><!--end .col -->
+                    </div><!--end .row -->
+                    <!-- END SPINNERS -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn ink-reaction btn-raised btn-primary">Инвестировать</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="BalancedModal" tabindex="-1" role="dialog" aria-labelledby="BalancedModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">     BalancedModal </h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <!-- BEGIN SPINNERS -->
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h4>BalancedModal</h4>
+                        </div><!--end .col -->
+                        <div class="col-lg-3 col-md-4">
+                            <article class="margin-bottom-xxl">
+                                <p>
+                                    BalancedModal - это ... .... .... ... ... ...... .... .... ... ... ..., ...  ...
+                                    ... .... .... ... ... ... ,... .... .... ... ... ...,... .... .... ... ... ...
+                                </p>
+                            </article>
+                        </div><!--end .col -->
+                        <div class="col-lg-offset-1 col-md-8">
+                            <div class="card">
+                                <div class="card-body">
+                                    <form class="form">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" id="spinner-decimal" value="0.96"/>
+                                            <label>Сума инвестирования</label>
+                                        </div>
+                                    </form>
+                                </div><!--end .card-body -->
+                            </div><!--end .card -->
+                        </div><!--end .col -->
+                    </div><!--end .row -->
+                    <!-- END SPINNERS -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn ink-reaction btn-raised btn-primary">Инвестировать</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="AggressiveModal" tabindex="-1" role="dialog" aria-labelledby="AggressiveModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">     AggressiveModal </h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <!-- BEGIN SPINNERS -->
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h4>Агрессивный</h4>
+                        </div><!--end .col -->
+                        <div class="col-lg-3 col-md-4">
+                            <article class="margin-bottom-xxl">
+                                <p>
+                                    Агрессивный - это ... .... .... ... ... ...... .... .... ... ... ..., ...  ...
+                                    ... .... .... ... ... ... ,... .... .... ... ... ...,... .... .... ... ... ...
+                                </p>
+                            </article>
+                        </div><!--end .col -->
+                        <div class="col-lg-offset-1 col-md-8">
+                            <div class="card">
+                                <div class="card-body">
+                                    <form class="form">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" id="spinner-decimal" value="0.96"/>
+                                            <label>Сума инвестирования</label>
+                                        </div>
+                                    </form>
+                                </div><!--end .card-body -->
+                            </div><!--end .card -->
+                        </div><!--end .col -->
+                    </div><!--end .row -->
+                    <!-- END SPINNERS -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn ink-reaction btn-raised btn-primary">Инвестировать</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 {% endblock %}
